radix-transactions/tests/assets/manifest_parser_error_invalid_number_of_types_3.diag
error: expected 1 number of types, found 0
   |
 5 | 
 6 | CALL_METHOD
 7 |     Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
 8 |     "some_method"
 9 |     # Invalid array specification
10 |     Array<>
   |          ^^ expected 1 number of types
11 | ;
   |